[package]
name = "poc_rust_tower"
version = "1.0.0"
edition = "2018"
authors = ["Richard Gomes"]

[dependencies]
log = "~0.4"
env_logger = "~0.6"
# serde = { version = "^1.0", features = ["derive"] }
serde = { version = "^1.0" }
serde_json = "^1.0"
serde_plain = "~0.3"
serde_urlencoded = "~0.5"
serde_yaml = "~0.8"
futures = "~0.1"
base64 = "~0.10"
http = "~0.1"
tower-web = { version = "0.3.7", features = ["rustls"] }

[dev-dependencies]
##isahc = { version = "~0.8", features = ["default", "json"] }
##tokio = { version = "~0.2", features = ["full"] }
